Fixed visibility problems in tutorial.

--- a/src/client/extras/TutorialContents.css
+++ b/src/client/extras/TutorialContents.css
@@ -2,6 +2,11 @@
   padding: 1ex;
 }
 
+.scrollable-tooltip {
+  max-height: 9em;
+  overflow-y: auto;
+}
+
 .tutorial-tooltip-button-row {
   margin-top: 1em;
   text-align: center;
